--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content = "ie-edge">
         <script src = "https://kit.fontawesome.com/3da1a747b2.js"></script>
         <title>Rock, Paper, Scissors!</title>
-        <link rel="stylesheet" href="./css/style.css">
-        <link rel="stylesheet" href="./css.modal.css">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="modal.css">
     </head>
     <body>
         <div class ="container">
